force-app/main/default/objects/Event_Planning__c/Event_Planning__c.object-meta.xml
<CustomObject>
    <label>Event Planning</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Planning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>