force-app/main/default/objects/Event_Planning__c/fields/Actual_Booth_Design_and_Construction__c.field-meta.xml
<CustomField>
    <fullName>Actual_Booth_Design_and_Construction__c</fullName>
    <label>Actual Booth Design and Construction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>