force-app/main/default/objects/Event_Planning__c/fields/Actual_Event_Fee_s__c.field-meta.xml
<CustomField>
    <fullName>Actual_Event_Fee_s__c</fullName>
    <label>Actual Meeting Space Rental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>