force-app/main/default/objects/Event_Planning__c/fields/Actual_per_Diems__c.field-meta.xml
<CustomField>
    <fullName>Actual_per_Diems__c</fullName>
    <label>Actual per Diems</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>