force-app/main/default/objects/Event_Planning__c/fields/Actual_Scanning_App__c.field-meta.xml
<CustomField>
    <fullName>Actual_Scanning_App__c</fullName>
    <label>Actual Lead Capture Devices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>