force-app/main/default/objects/Event_Planning__c/fields/Actual_Swag__c.field-meta.xml
<CustomField>
    <fullName>Actual_Swag__c</fullName>
    <label>Actual Swag and Groceries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>