force-app/main/default/objects/Event_Planning__c/fields/Actual_Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Spent__c</fullName>
    <formula>Actual_Event_Fee_s__c +  Actual_Furniture_Accessories__c +  Actual_Hotels__c +  Actual_per_Diems__c +  Actual_Scanning_App__c +  Actual_Swag__c +  Actual_Travel__c +  Actual_Booth_Design_and_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Total Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>