force-app/main/default/objects/Event_Planning__c/fields/Actual_Travel__c.field-meta.xml
<CustomField>
    <fullName>Actual_Travel__c</fullName>
    <label>Actual Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>