force-app/main/default/objects/Event_Planning__c/fields/Create_Date_Minus_59_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Minus_59_Minutes__c</fullName>
    <formula>CreatedDate - (59/1440)</formula>
    <label>Create Date Minus 59 Minutes</label>
    <type>DateTime</type>
</CustomField>