force-app/main/default/objects/Event_Planning__c/fields/Est_Furniture_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Est_Furniture_Accessories__c</fullName>
    <label>Est Furniture/Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>