force-app/main/default/objects/Event_Planning__c/fields/Est_Hotels__c.field-meta.xml
<CustomField>
    <fullName>Est_Hotels__c</fullName>
    <inlineHelpText>$1200</inlineHelpText>
    <label>Est Hotels</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>