force-app/main/default/objects/Event_Planning__c/fields/Est_per_Diems__c.field-meta.xml
<CustomField>
    <fullName>Est_per_Diems__c</fullName>
    <inlineHelpText>$400/day</inlineHelpText>
    <label>Est per Diems</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>