force-app/main/default/objects/Event_Planning__c/fields/Est_Scanning_App__c.field-meta.xml
<CustomField>
    <fullName>Est_Scanning_App__c</fullName>
    <inlineHelpText>$100/license</inlineHelpText>
    <label>Est Lead Capture Devices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>