force-app/main/default/objects/Event_Planning__c/fields/Est_Swag__c.field-meta.xml
<CustomField>
    <fullName>Est_Swag__c</fullName>
    <label>Est Swag and Groceries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>