force-app/main/default/objects/Event_Planning__c/fields/Est_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Budget__c</fullName>
    <formula>Est_Event_Fee_s__c +  Est_Furniture_Accessories__c +  Est_Hotels__c +  Est_per_Diems__c +  Est_Scanning_App__c +  Est_Swag__c +  Est_Travel__c +  Est_Booth_Design_and_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>