force-app/main/default/objects/Event_Planning__c/fields/Est_Travel__c.field-meta.xml
<CustomField>
    <fullName>Est_Travel__c</fullName>
    <inlineHelpText>US $500, EU $1200</inlineHelpText>
    <label>Est Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>