force-app/main/default/objects/Event_Planning__c/fields/Hotel_Address__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Address__c</fullName>
    <label>Hotel Address</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>