force-app/main/default/objects/Event_Planning__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>