force-app/main/default/objects/Event_Planning__c/fields/Post_Event_Review__c.field-meta.xml
<CustomField>
    <fullName>Post_Event_Review__c</fullName>
    <label>Post Event Review</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>